--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
 - 2.7.11
 install:
-- pip install boto3 Flask flask-cors tornado coverage codeclimate-test-reporter ddt PyJWT requests moto pysam==0.9.0
+- pip install -r requirements.txt
 script:
 - python -m unittest discover tests
 notifications:
