--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # PyCharm IDE files
 .idea/
+test.json
 # local ignored file
 *.pyc
 resources/.aws_credentials.json
@@ -98,3 +99,4 @@ resources/.aws_credentials.json
 .aws_credentials.json
 .aws*
 .idea
+scripts/database/test.json
