cleaning up logger
- until later when we really need to set this to proper files, need to
ask jeremy what the convention is for the project.

--- a/config/logging_config.ini
+++ b/config/logging_config.ini
@@ -1,6 +1,6 @@
 ; TODO: Figure out how to configure different logging levels for different classes
 [loggers]
-keys=root,IonReporter
+keys=root
 
 [handlers]
 keys=stream_handler
@@ -11,11 +11,6 @@ keys=defaultFormatter
 [logger_root]
 level=DEBUG
 handlers=stream_handler
-
-[logger_IonReporter]
-level=INFO
-handlers=stream_handler
-qualname=IonReporter
 
 [handler_stream_handler]
 class=StreamHandler
