--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 boto3==1.4.0
-botocore==1.4.49
+botocore==1.4.50
 celery==3.1.23
 ddt==1.1.0
 Flask==0.11.1
 Flask_RESTful==0.3.5
-jsonschema==2.5.1
 mock==2.0.0
+pysam==0.9.1.4
 tornado==4.4.1
-PyYAML==3.11
+Werkzeug==0.11.10
+PyJWT==1.4.2
+PyYAML==3.12
