--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,5 +1,14 @@
 ---
 engines:
+  radon:
+    enabled: true
+    exclude_fingerprints:
+    - f3df0c8781347f1c2b4711814370dba5
+    - 87a986c9e0de543a45f0280b29b50321
+    - 33ccdd645f4b4686c92d3c940773c5cf
+    - 82d4ae92a2b90373b632db2f129947c2
+    - 159393f376fc5213d2b4de74dd742b84
+    - 159393f376fc5213d2b4de74dd742b84
   duplication:
     enabled: true
     config:
@@ -25,10 +34,3 @@ exclude_paths:
 - config/
 - tests/
 - oncomine-vcf-converter-1.4.1/
-exclude_fingerprints:
-- f3df0c8781347f1c2b4711814370dba5
-- 87a986c9e0de543a45f0280b29b50321
-- 33ccdd645f4b4686c92d3c940773c5cf
-- 82d4ae92a2b90373b632db2f129947c2
-- 159393f376fc5213d2b4de74dd742b84
-- 159393f376fc5213d2b4de74dd742b84
