--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install: pip install -r requirements.txt
 script:
 - python -m unittest discover tests
 after_success:
-- coverage run ./app.py
+- coverage run tests/*.py
 - docker build -t matchbox/nci-match-ir-ecoystem-api .
 - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
 - docker tag -f matchbox/nci-match-ir-ecoystem-api matchbox/nci-match-ir-ecoystem-api:latest
