--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ python: 2.7.12
 install: pip install -r requirements.txt
 script:
 #- python -m unittest discover tests
-- coverage run -m unittest discover tests/
+- coverage run -m unittest discover tests
 after_success:
 - docker build -t matchbox/nci-match-ir-ecoystem-api .
 - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
