--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 boto3==1.4.0
 botocore==1.4.50
 celery==3.1.23
+ddbmock==1.0.3
 ddt==1.1.0
 Flask==0.11.1
 Flask_RESTful==0.3.5
@@ -10,4 +11,3 @@ tornado==4.4.1
 Werkzeug==0.11.11
 PyJWT==1.4.2
 PyYAML==3.12
-codeclimate-test-reporter
