--- a/config/logging_config.ini
+++ b/config/logging_config.ini
@@ -19,4 +19,4 @@ formatter=defaultFormatter
 args=(sys.stderr,)
 
 [formatter_defaultFormatter]
-format=%(asctime)s %(name)-12s %(levelname)-8s %(message)s
+format=%(asctime)s IR_ECOSYSTEM %(name)-12s %(levelname)-8s %(message)s
