--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
 boto3==1.4.0
-boto==2.42.0
 botocore==1.4.55
+boto==2.42.0
 celery==3.1.23
+ddbmock==1.0.3
 ddt==1.1.0
 Flask==0.11.1
 Flask_RESTful==0.3.5
 mock==2.0.0
 pysam==0.9.1.4
 tornado==4.4.1
+PyVCF==0.6.7
 Werkzeug==0.11.11
 PyJWT==1.4.2
 PyYAML==3.12
