--- a/Dockerfile.python
+++ b/Dockerfile.python
@@ -11,6 +11,9 @@ RUN pip install -r /nci-match-ir-ecosystem-api/requirements.txt
 # Add the app code 
 COPY . /nci-match-ir-ecosystem-api/
 
+# Install oncomine-vcf-converter
+RUN cd  /nci-match-ir-ecosystem-api/oncomine-vcf-converter-1.4.3 && python setup.py install && which convert_vcf.py
+
 # Default command 
 CMD cd /nci-match-ir-ecosystem-api && python ./app.py
 #CMD cd /nci-match-ir-ecosystem-api && celery -A tasks.tasks worker --loglevel=INFO
