--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ after_success:
 - docker images
 - docker push matchbox/nci-match-ir-ecosystem-api:latest
 - docker push matchbox/nci-match-ir-ecosystem-processor:latest
-#Deploy to AWS IntTest
+#Deploy both services to AWS IntTest
 - docker run -it --rm -e AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID -e AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY -e AWS_DEFAULT_REGION=us-east-1 silintl/ecs-deploy --cluster PedMatch-IntTest-Backend  --service-name PedMatch-nci-match-ir-ecosystem-api-INTTEST -i matchbox/nci-match-ir-ecosystem-api:latest
 - docker run -it --rm -e AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID -e AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY -e AWS_DEFAULT_REGION=us-east-1 silintl/ecs-deploy --cluster PedMatch-IntTest-Backend  --service-name PedMatch-nci-match-ir-ecosystem-processor-INTTEST -i matchbox/nci-match-ir-ecosystem-processor:latest
 #Trigger Travis bdd tests
