updated tests config file

--- a/tests/config/environment.yml
+++ b/tests/config/environment.yml
@@ -4,6 +4,7 @@ development:
   port: "10241"
   bucket: "pedmatch-dev"
   tmp_file_dir: "/tmp"
+  polling_interval: "10"
   aws_download_time_limit: 600
 
 test:
@@ -12,5 +13,6 @@ test:
   port: "10241"
   bucket: "pedmatch-int"
   tmp_file_dir: "/tmp"
+  polling_interval: "10"
+  ir_queue_name: "ion_reporter_queue"
   aws_download_time_limit: 600
-
