--- a/config/environment.yml
+++ b/config/environment.yml
@@ -5,6 +5,8 @@ development:
   bucket: "pedmatch-dev"
   tmp_file_dir: "/tmp"
   polling_interval: "10"
+  read_capacity: "5"
+  write_capacity: "5"
   aws_download_time_limit: 600
 
 test:
@@ -14,6 +16,8 @@ test:
   bucket: "pedmatch-int"
   tmp_file_dir: "/tmp"
   polling_interval: "10"
+  read_capacity: "5"
+  write_capacity: "5"
   ir_queue_name: "ion_reporter_queue"
   aws_download_time_limit: 600
 
@@ -24,6 +28,8 @@ uat:
   bucket: "pedmatch-uat"
   tmp_file_dir: "/tmp"
   polling_interval: "10"
+  read_capacity: "5"
+  write_capacity: "5"
   ir_queue_name: "ion_reporter_queue"
   aws_download_time_limit: 600
 
@@ -34,5 +40,7 @@ production:
   bucket: "pedmatch"
   tmp_file_dir: "/tmp"
   polling_interval: "10"
+  read_capacity: "10"
+  write_capacity: "10"
   ir_queue_name: "ion_reporter_queue"
   aws_download_time_limit: 600
