changed to ints

--- a/config/environment.yml
+++ b/config/environment.yml
@@ -4,9 +4,9 @@ development:
   port: "10241"
   bucket: "pedmatch-dev"
   tmp_file_dir: "/tmp"
-  polling_interval: "10"
-  read_capacity: "5"
-  write_capacity: "5"
+  polling_interval: 10
+  read_capacity: 5
+  write_capacity: 5
   aws_download_time_limit: 600
 
 test:
@@ -15,9 +15,9 @@ test:
   port: "10241"
   bucket: "pedmatch-int"
   tmp_file_dir: "/tmp"
-  polling_interval: "10"
-  read_capacity: "5"
-  write_capacity: "5"
+  polling_interval: 10
+  read_capacity: 5
+  write_capacity: 5
   ir_queue_name: "ion_reporter_queue"
   aws_download_time_limit: 600
 
@@ -27,9 +27,9 @@ uat:
   port: "10241"
   bucket: "pedmatch-uat"
   tmp_file_dir: "/tmp"
-  polling_interval: "10"
-  read_capacity: "5"
-  write_capacity: "5"
+  polling_interval: 10
+  read_capacity: 5
+  write_capacity: 5
   ir_queue_name: "ion_reporter_queue"
   aws_download_time_limit: 600
 
@@ -39,8 +39,8 @@ production:
   port: "10241"
   bucket: "pedmatch"
   tmp_file_dir: "/tmp"
-  polling_interval: "10"
-  read_capacity: "10"
-  write_capacity: "10"
+  polling_interval: 10
+  read_capacity: 10
+  write_capacity: 10
   ir_queue_name: "ion_reporter_queue"
   aws_download_time_limit: 600
