--- a/tests/config/environment.yml
+++ b/tests/config/environment.yml
@@ -4,9 +4,9 @@ development:
   port: "10241"
   bucket: "pedmatch-dev"
   tmp_file_dir: "/tmp"
-  polling_interval: "10"
-  read_capacity: "5"
-  write_capacity: "5"
+  polling_interval: 10
+  read_capacity: 5
+  write_capacity: 5
   aws_download_time_limit: 600
 
 test:
@@ -15,8 +15,8 @@ test:
   port: "10241"
   bucket: "pedmatch-int"
   tmp_file_dir: "/tmp"
-  polling_interval: "10"
-  read_capacity: "5"
-  write_capacity: "5"
+  polling_interval: 10
+  read_capacity: 5
+  write_capacity: 5
   ir_queue_name: "ion_reporter_queue"
   aws_download_time_limit: 600
