--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,12 @@ celery==3.1.23
 ddbmock==1.0.3
 ddt==1.1.0
 Flask==0.11.1
-flask-cors==3.0.2
+Flask-Cors==3.0.2
 Flask_RESTful==0.3.5
 mock==2.0.0
 pysam==0.9.1.4
 tornado==4.4.1
-PyVCF==0.6.8
+PyVCF==0.6.7
 Werkzeug==0.11.11
 PyJWT==1.4.2
 PyYAML==3.12
