--- a/config/environment.yml
+++ b/config/environment.yml
@@ -1,5 +1,6 @@
 development:
   dynamo_endpoint: "http://localhost:8000"
+  patient_endpoint: "http://localhost:10240"
   region: "us-east-1"
   port: "10241"
   bucket: "pedmatch-dev"
@@ -11,6 +12,7 @@ development:
 
 test:
   dynamo_endpoint: "https://dynamodb.us-east-1.amazonaws.com"
+  patient_endpoint: "https://pedmatch-int.nci.nih.gov"
   region: "us-east-1"
   port: "10241"
   bucket: "pedmatch-int"
@@ -23,6 +25,7 @@ test:
 
 uat:
   dynamo_endpoint: "https://dynamodb.us-east-1.amazonaws.com"
+  patient_endpoint: "https://pedmatch-uat.nci.nih.gov"
   region: "us-east-1"
   port: "10241"
   bucket: "pedmatch-uat"
@@ -35,6 +38,7 @@ uat:
 
 production:
   dynamo_endpoint: "https://dynamodb.us-east-1.amazonaws.com"
+  patient_endpoint: "https://pedmatch.nci.nih.gov"
   region: "us-east-1"
   port: "10241"
   bucket: "pedmatch"
