updated test yml

--- a/tests/config/environment.yml
+++ b/tests/config/environment.yml
@@ -1,5 +1,6 @@
 development:
   dynamo_endpoint: "http://localhost:8000"
+  patient_endpoint: "http://localhost:10240"
   region: "us-east-1"
   port: "10241"
   bucket: "pedmatch-dev"
@@ -11,6 +12,7 @@ development:
 
 test:
   dynamo_endpoint: "https://dynamodb.us-east-1.amazonaws.com"
+  patient_endpoint: "https://pedmatch-int.nci.nih.gov"
   region: "us-east-1"
   port: "10241"
   bucket: "pedmatch-int"
