add rule_endpoint, patient_post_path, rule_path

--- a/config/environment.yml
+++ b/config/environment.yml
@@ -1,6 +1,9 @@
 development:
   dynamo_endpoint: "http://localhost:8000"
   patient_endpoint: "http://localhost:10240"
+  rule_endpoint: "http://localhost:8080"
+  patient_post_path: "/api/v1/patients/ir"
+  rule_path: "/api/v1/rules/sample_control_report/"
   shipments_path: "/api/v1/patients/shipments/"
   region: "us-east-1"
   port: "10241"
@@ -14,7 +17,9 @@ development:
 test:
   dynamo_endpoint: "https://dynamodb.us-east-1.amazonaws.com"
   patient_endpoint: "https://pedmatch-int.nci.nih.gov"
-  shipments_path: "/api/v1/shipments/"
+  patient_post_path: "/api/v1/patients/ir"
+  rule_path: "/api/v1/rules/sample_control_report/"
+  shipments_path: "/api/v1/patients/shipments/"
   region: "us-east-1"
   port: "10241"
   bucket: "pedmatch-int"
@@ -27,8 +32,10 @@ test:
 
 uat:
   dynamo_endpoint: "https://dynamodb.us-east-1.amazonaws.com"
+  patient_post_path: "/api/v1/patients/ir"
   patient_endpoint: "https://pedmatch-uat.nci.nih.gov"
-  shipments_path: "/api/v1/shipments/"
+  rule_path: "/api/v1/rules/sample_control_report/"
+  shipments_path: "/api/v1/patients/shipments/"
   region: "us-east-1"
   port: "10241"
   bucket: "pedmatch-uat"
@@ -42,7 +49,9 @@ uat:
 production:
   dynamo_endpoint: "https://dynamodb.us-east-1.amazonaws.com"
   patient_endpoint: "https://pedmatch.nci.nih.gov"
-  shipments_path: "/api/v1/shipments/"
+  patient_post_path: "/api/v1/patients/ir"
+  rule_path: "/api/v1/rules/sample_control_report/"
+  shipments_path: "/api/v1/patients/shipments/"
   region: "us-east-1"
   port: "10241"
   bucket: "pedmatch"
