--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Flask-Cors==3.0.2
 Flask_RESTful==0.3.5
 mock==2.0.0
 pysam==0.9.1.4
+slackclient==1.0.2
 tornado==4.4.1
 PyVCF==0.6.8
 Werkzeug==0.11.11
