--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-boto3==1.4.0
-botocore==1.4.57
-boto==2.42.0
-celery==3.1.23
+boto3==1.4.1
+botocore==1.4.60
+celery==3.1.24
 ddbmock==1.0.3
-ddt==1.1.0
+ddt==1.1.1
 Flask==0.11.1
 Flask-Cors==3.0.2
 Flask_RESTful==0.3.5
 mock==2.0.0
 pysam==0.9.1.4
+requests==2.11.1
 slackclient==1.0.2
-tornado==4.4.1
+tornado==4.4.2
 PyVCF==0.6.8
 Werkzeug==0.11.11
 PyJWT==1.4.2
