--- a/config/environment.yml
+++ b/config/environment.yml
@@ -5,6 +5,8 @@ development:
   patient_post_path: "/api/v1/patients/ir"
   rule_path: "/api/v1/rules/sample_control_report/"
   shipments_path: "/api/v1/patients/shipments/"
+  bot_name: "pedmatchbot_dev"
+  slack_channel_id: "C2N1BJX0U"
   region: "us-east-1"
   port: "10241"
   bucket: "pedmatch-dev"
@@ -20,6 +22,8 @@ test:
   patient_post_path: "/api/v1/patients/ir"
   rule_path: "/api/v1/rules/sample_control_report/"
   shipments_path: "/api/v1/patients/shipments/"
+  bot_name: "pedmatchbot_test"
+  slack_channel_id: "C2NDP4QKA"
   region: "us-east-1"
   port: "10241"
   bucket: "pedmatch-int"
@@ -36,6 +40,8 @@ uat:
   patient_endpoint: "https://pedmatch-uat.nci.nih.gov"
   rule_path: "/api/v1/rules/sample_control_report/"
   shipments_path: "/api/v1/patients/shipments/"
+  bot_name: "pedmatchbot_uat"
+  slack_channel_id: "C2NE0QS57"
   region: "us-east-1"
   port: "10241"
   bucket: "pedmatch-uat"
@@ -52,6 +58,8 @@ production:
   patient_post_path: "/api/v1/patients/ir"
   rule_path: "/api/v1/rules/sample_control_report/"
   shipments_path: "/api/v1/patients/shipments/"
+  bot_name: "pedmatchbot_prod"
+  slack_channel_id: "C2NDQKS4E"
   region: "us-east-1"
   port: "10241"
   bucket: "pedmatch"
