Updating env yml

--- a/config/environment.yml
+++ b/config/environment.yml
@@ -6,7 +6,7 @@ development:
   rule_path: "/api/v1/rules/sample_control_report/"
   shipments_path: "/api/v1/patients/shipments/"
   bot_name: "pedmatchbot_dev"
-  slack_channel_id: "C2N1BJX0U"
+  slack_channel_id: "C2NE9M08N"
   region: "us-east-1"
   port: "10241"
   bucket: "pedmatch-dev"
@@ -23,7 +23,7 @@ test:
   rule_path: "/api/v1/rules/sample_control_report/"
   shipments_path: "/api/v1/patients/shipments/"
   bot_name: "pedmatchbot_test"
-  slack_channel_id: "C2NDP4QKA"
+  slack_channel_id: "C2NEK70F9"
   region: "us-east-1"
   port: "10241"
   bucket: "pedmatch-int"
@@ -41,7 +41,7 @@ uat:
   rule_path: "/api/v1/rules/sample_control_report/"
   shipments_path: "/api/v1/patients/shipments/"
   bot_name: "pedmatchbot_uat"
-  slack_channel_id: "C2NE0QS57"
+  slack_channel_id: "C2NEA2XQW"
   region: "us-east-1"
   port: "10241"
   bucket: "pedmatch-uat"
@@ -59,7 +59,7 @@ production:
   rule_path: "/api/v1/rules/sample_control_report/"
   shipments_path: "/api/v1/patients/shipments/"
   bot_name: "pedmatchbot_prod"
-  slack_channel_id: "C2NDQKS4E"
+  slack_channel_id: "C2NEFKYN9"
   region: "us-east-1"
   port: "10241"
   bucket: "pedmatch"
