--- a/tests/config/environment.yml
+++ b/tests/config/environment.yml
@@ -3,7 +3,7 @@ development:
   patient_endpoint: "http://localhost:10240"
   shipments_path: "/api/v1/shipments/"
   bot_name: "pedmatchbot_dev"
-  slack_channel_id: "C2NE5J18S"
+  slack_channel_id: "C2NE9M08N"
   region: "us-east-1"
   port: "10241"
   bucket: "pedmatch-dev"
@@ -17,7 +17,7 @@ test:
   dynamo_endpoint: "https://dynamodb.us-east-1.amazonaws.com"
   patient_endpoint: "https://pedmatch-int.nci.nih.gov"
   bot_name: "pedmatchbot_test"
-  slack_channel_id: "C2NDP4QKA"
+  slack_channel_id: "C2NEK70F9"
   region: "us-east-1"
   port: "10241"
   bucket: "pedmatch-int"
