Added icon_emoji to env.yml

--- a/config/environment.yml
+++ b/config/environment.yml
@@ -7,6 +7,7 @@ development:
   shipments_path: "/api/v1/patients/shipments/"
   bot_name: "pedmatchbot_dev"
   slack_channel_id: "C2NE9M08N"
+  icon_emoji: ":face_with_head_bandage:"
   region: "us-east-1"
   port: "10241"
   bucket: "pedmatch-dev"
@@ -25,6 +26,7 @@ test:
   shipments_path: "/api/v1/patients/shipments/"
   bot_name: "pedmatchbot_test"
   slack_channel_id: "C2NE9M08N"
+  icon_emoji: ":face_with_head_bandage:"
   region: "us-east-1"
   port: "10241"
   bucket: "pedmatch-int"
@@ -44,6 +46,7 @@ uat:
   shipments_path: "/api/v1/patients/shipments/"
   bot_name: "pedmatchbot_uat"
   slack_channel_id: "C2NEA2XQW"
+  icon_emoji: ":face_with_head_bandage:"
   region: "us-east-1"
   port: "10241"
   bucket: "pedmatch-uat"
@@ -63,6 +66,7 @@ production:
   shipments_path: "/api/v1/patients/shipments/"
   bot_name: "pedmatchbot_prod"
   slack_channel_id: "C2NEFKYN9"
+  icon_emoji: ":face_with_head_bandage:"
   region: "us-east-1"
   port: "10241"
   bucket: "pedmatch"
