--- a/tests/config/environment.yml
+++ b/tests/config/environment.yml
@@ -7,6 +7,7 @@ development:
   shipments_path: "/api/v1/shipments/"
   bot_name: "pedmatchbot_dev"
   slack_channel_id: "C2NE9M08N"
+  icon_emoji: ":face_with_head_bandage:"
   region: "us-east-1"
   port: "10241"
   bucket: "pedmatch-dev"
@@ -24,6 +25,7 @@ test:
   shipments_path: "/api/v1/patients/shipments/"
   bot_name: "pedmatchbot_test"
   slack_channel_id: "C2NE9M08N"
+  icon_emoji: ":face_with_head_bandage:"
   region: "us-east-1"
   port: "10241"
   bucket: "pedmatch-int"
