--- a/Dockerfile.celery
+++ b/Dockerfile.celery
@@ -22,4 +22,4 @@ ADD https://raw.githubusercontent.com/CBIIT/match-docker/master/docker-compose-e
 RUN chmod 755 docker-compose-env.sh && ls -alt $INSTALL_PATH
 
 # Default command 
-CMD ./docker-compose-env.sh && celery -A tasks.tasks worker --loglevel=INFO --uid=nobody
+CMD ["./docker-compose-env.sh"], ["&&"], ["celery"], ["-A"], ["tasks.tasks"], ["worker"], ["--loglevel=INFO"], ["--uid=nobody"]
