--- a/Dockerfile.python
+++ b/Dockerfile.python
@@ -22,4 +22,4 @@ ADD https://raw.githubusercontent.com/CBIIT/match-docker/master/docker-compose-e
 RUN chmod 755 docker-compose-env.sh && ls -alt $INSTALL_PATH
 
 # Default command 
-CMD ["./docker-compose-env.sh"], ["&&"], ["python"], ["./app.py"]
+CMD ./docker-compose-env.sh && python ./app.py
