--- a/config/environment.yml
+++ b/config/environment.yml
@@ -8,7 +8,7 @@ development:
   bot_name: "pedmatchbot_dev"
   slack_channel_id: "C2NE9M08N"
   icon_emoji: ":face_with_head_bandage:"
-  requeue_countdown: 10800
+  requeue_countdown: 10
   region: "us-east-1"
   port: "10241"
   bucket: "pedmatch-dev"
@@ -26,7 +26,7 @@ test:
   rule_path: "/api/v1/rules/sample_control_report/"
   shipments_path: "/api/v1/patients/shipments/"
   bot_name: "pedmatchbot_test"
-  slack_channel_id: "C2NE9M08N"
+  slack_channel_id: "C2NEK70F9"
   icon_emoji: ":face_with_head_bandage:"
   requeue_countdown: 10800
   region: "us-east-1"
