--- a/config/environment.yml
+++ b/config/environment.yml
@@ -22,7 +22,7 @@ test:
   dynamo_endpoint: "https://dynamodb.us-east-1.amazonaws.com"
   patient_endpoint: "https://pedmatch-int.nci.nih.gov"
   rule_endpoint: "https://pedmatch-int.nci.nih.gov"
-  patient_post_path: "/api/v1/patients/ir"
+  patient_post_path: "/api/v1/patients/variant_report"
   rule_path: "/api/v1/rules/sample_control_report/"
   shipments_path: "/api/v1/patients/shipments/"
   bot_name: "pedmatchbot_test"
@@ -43,7 +43,7 @@ uat:
   dynamo_endpoint: "https://dynamodb.us-east-1.amazonaws.com"
   patient_endpoint: "https://pedmatch-uat.nci.nih.gov"
   rule_endpoint: "https://pedmatch-uat.nci.nih.gov"
-  patient_post_path: "/api/v1/patients/ir"
+  patient_post_path: "/api/v1/patients/variant_report"
   rule_path: "/api/v1/rules/sample_control_report/"
   shipments_path: "/api/v1/patients/shipments/"
   bot_name: "pedmatchbot_uat"
@@ -64,7 +64,7 @@ production:
   dynamo_endpoint: "https://dynamodb.us-east-1.amazonaws.com"
   patient_endpoint: "https://pedmatch.nci.nih.gov"
   rule_endpoint: "https://pedmatch.nci.nih.gov"
-  patient_post_path: "/api/v1/patients/ir"
+  patient_post_path: "/api/v1/patients/variant_report"
   rule_path: "/api/v1/rules/sample_control_report/"
   shipments_path: "/api/v1/patients/shipments/"
   bot_name: "pedmatchbot_prod"
