--- a/Dockerfile.celery
+++ b/Dockerfile.celery
@@ -23,3 +23,4 @@ RUN chmod 755 docker-compose-env.sh && ls -alt $INSTALL_PATH
 
 # Default command 
 CMD ./docker-compose-env.sh && celery -A tasks.tasks worker --loglevel=INFO --uid=nobody
+CMD ./docker-compose-env.sh && celery -A tasks.tasks worker --loglevel=INFO --uid=nobody --concurrency=1
