--- a/tests/config/environment.yml
+++ b/tests/config/environment.yml
@@ -9,6 +9,7 @@ development:
   slack_channel_id: "C2NE9M08N"
   icon_emoji: ":face_with_head_bandage:"
   requeue_countdown: 10800
+  visibility_timeout: 36000
   region: "us-east-1"
   port: "10241"
   bucket: "pedmatch-dev"
