--- a/tests/config/environment.yml
+++ b/tests/config/environment.yml
@@ -5,7 +5,7 @@ development:
   patient_post_path: "/api/v1/patients/ir"
   rule_path: "/api/v1/rules/sample_control_report/"
   shipments_path: "/api/v1/shipments/"
-  bot_name: "pedmatchbot_dev"
+  bot_name: "ir_ecosystem_bot"
   slack_channel_id: "C2NE9M08N"
   icon_emoji: ":face_with_head_bandage:"
   requeue_countdown: 10800
@@ -25,7 +25,7 @@ test:
   patient_post_path: "/api/v1/patients/ir"
   rule_path: "/api/v1/rules/sample_control_report/"
   shipments_path: "/api/v1/patients/shipments/"
-  bot_name: "pedmatchbot_test"
+  bot_name: "ir_ecosystem_bot"
   slack_channel_id: "C2NE9M08N"
   icon_emoji: ":face_with_head_bandage:"
   requeue_countdown: 10800
