--- a/config/environment.yml
+++ b/config/environment.yml
@@ -10,6 +10,7 @@ development:
   icon_emoji: ":face_with_head_bandage:"
   requeue_countdown: 10800
   visibility_timeout: 36000
+  s3_auth_policy_exp: 24
   region: "us-east-1"
   port: "10241"
   bucket: "pedmatch-dev"
@@ -31,6 +32,7 @@ test:
   icon_emoji: ":face_with_head_bandage:"
   requeue_countdown: 10800
   visibility_timeout: 36000
+  s3_auth_policy_exp: 24
   region: "us-east-1"
   port: "10241"
   bucket: "pedmatch-int"
@@ -53,6 +55,7 @@ uat:
   icon_emoji: ":face_with_head_bandage:"
   requeue_countdown: 10800
   visibility_timeout: 36000
+  s3_auth_policy_exp: 24
   region: "us-east-1"
   port: "10241"
   bucket: "pedmatch-uat"
@@ -75,6 +78,7 @@ production:
   icon_emoji: ":face_with_head_bandage:"
   requeue_countdown: 10800
   visibility_timeout: 36000
+  s3_auth_policy_exp: 24
   region: "us-east-1"
   port: "10241"
   bucket: "pedmatch"
